[gd_scene load_steps=12 format=3 uid="uid://cp8xl0n2ctlb6"]

[ext_resource type="Script" path="res://Scripts/skeleton.gd" id="1_fgv4t"]
[ext_resource type="Texture2D" uid="uid://drs5rhg4bmt4w" path="res://Assets/2D Dungeon Asset Pack_v5.2/Character_animation/monsters_idle/skeleton1/v1/skeleton_v1_1.png" id="2_dk5k1"]
[ext_resource type="Texture2D" uid="uid://eb0njxg6nt7c" path="res://Assets/2D Dungeon Asset Pack_v5.2/Character_animation/monsters_idle/skeleton1/v1/skeleton_v1_2.png" id="3_paong"]
[ext_resource type="Texture2D" uid="uid://d1yln28dxujyv" path="res://Assets/2D Dungeon Asset Pack_v5.2/Character_animation/monsters_idle/skeleton1/v1/skeleton_v1_3.png" id="4_cf8rq"]
[ext_resource type="Texture2D" uid="uid://c3uou8ovix1" path="res://Assets/2D Dungeon Asset Pack_v5.2/Character_animation/monsters_idle/skeleton1/v1/skeleton_v1_4.png" id="5_vebl2"]
[ext_resource type="PackedScene" uid="uid://blshpt71qtc5e" path="res://Utility/hurt_box.tscn" id="6_4yqyh"]
[ext_resource type="PackedScene" uid="uid://bexodbpciej6h" path="res://Utility/hit_box.tscn" id="7_ra4qg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hxw74"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dk5k1")
}, {
"duration": 1.0,
"texture": ExtResource("3_paong")
}, {
"duration": 1.0,
"texture": ExtResource("4_cf8rq")
}, {
"duration": 1.0,
"texture": ExtResource("5_vebl2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1euy"]
size = Vector2(32.1086, 32.2573)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_582s4"]
size = Vector2(21.8517, 29.7302)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_io3gb"]
size = Vector2(31.839, 31.4644)

[node name="Skeleton" type="CharacterBody2D" groups=["attack"]]
collision_layer = 4
collision_mask = 10
script = ExtResource("1_fgv4t")
movement_speed = 40

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_hxw74")

[node name="HurtBox" parent="." instance=ExtResource("6_4yqyh")]
visible = false
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-0.0414505, 0.0507526)
shape = SubResource("RectangleShape2D_p1euy")

[node name="HitBox" parent="." instance=ExtResource("7_ra4qg")]
visible = false
collision_layer = 4
collision_mask = 1

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-3.08879, -0.0235729)
shape = SubResource("RectangleShape2D_582s4")

[node name="wallCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.119766, 0.177483)
shape = SubResource("RectangleShape2D_io3gb")

[node name="Timer" type="Timer" parent="wallCollision"]
wait_time = 15.0
one_shot = true
autostart = true

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="wallCollision/Timer" to="." method="_on_timer_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
